# rezonator2-widgets-collection

./: CMakeLists.txt
libs/: CMakeLists.txt
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/funcs/: CMakeLists.txt
src/funcs_window/: CMakeLists.txt
src/io/: CMakeLists.txt
src/widgets/: CMakeLists.txt
